--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container d-flex justify-content-center mainLogo">
     <div class="row">
       <div class="col-md-12">
-        <img src="/resources/img/mainLogo.png" alt="Slime Rancher Logo">
+        <img src="resources/img/mainLogo.png" alt="Slime Rancher Logo">
       </div>
     </div>
   </div>
