--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 <script src="https://use.fontawesome.com/9f40b6761f.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700" rel="stylesheet">
-<link rel="stylesheet" href="/resources/css/style.css">
+<link rel="stylesheet" href="resources/css/style.css">
   </head>
   <body>
   
