--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="container">
   <div class="row">
     <div class="col-md-1">
-      <img src="/resources/img/merchIcon.png" alt="" class="merchIcon">
+      <img src="resources/img/merchIcon.png" alt="" class="merchIcon">
     </div>
     <div class="col-md-11">
      <h1 class="text-uppercase text-center mt-5 merchText">For PC, Mac, Linux, and Xbox</h1> 
@@ -45,13 +45,13 @@
      </div>
      <div class="row ctaButtons">
        <div class="col-md-4">
-         <img src="/resources/img/steamButton.png" alt="">
+         <img src="resources/img/steamButton.png" alt="">
        </div>
        <div class="col-md-4">
-         <img src="/resources/img/directButton.png" alt="">
+         <img src="resources/img/directButton.png" alt="">
        </div>
        <div class="col-md-4">
-         <img src="/resources/img/xboxButton.png" alt="">
+         <img src="resources/img/xboxButton.png" alt="">
        </div>
      </div>
      <div class="row text-center">
@@ -108,84 +108,84 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="/resources/img/img01.jpg" alt="First slide">
+            <img class="d-block w-100" src="resources/img/img01.jpg" alt="First slide">
             <div class="carousel-caption d-none d-md-block">
                 <a href="http://slimerancher.com/img/screen01.jpg" class="btn btn-success btn-lg">Download!</a>
               </div>           
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/resources/img/img02.jpg" alt="Second slide">
+            <img class="d-block w-100" src="resources/img/img02.jpg" alt="Second slide">
             <div class="carousel-caption d-none d-md-block">
                 <a href="http://slimerancher.com/img/screen01.jpg" class="btn btn-success btn-lg">Download!</a>
               </div>          
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/resources/img/img03.jpg" alt="Third slide">
+            <img class="d-block w-100" src="resources/img/img03.jpg" alt="Third slide">
             <div class="carousel-caption d-none d-md-block">
                 <a href="http://slimerancher.com/img/screen01.jpg" class="btn btn-success btn-lg">Download!</a>
               </div>          
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/resources/img/img04.jpg" alt="Fourth slide">
+            <img class="d-block w-100" src="resources/img/img04.jpg" alt="Fourth slide">
             <div class="carousel-caption d-none d-md-block">
                 <a href="http://slimerancher.com/img/screen01.jpg" class="btn btn-success btn-lg">Download!</a>
               </div>          
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/resources/img/img05.jpg" alt="Fifth slide">
+            <img class="d-block w-100" src="resources/img/img05.jpg" alt="Fifth slide">
             <div class="carousel-caption d-none d-md-block">
                 <a href="http://slimerancher.com/img/screen01.jpg" class="btn btn-success btn-lg">Download!</a>
               </div>          
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/resources/img/img06.jpg" alt="Sixth slide">
+            <img class="d-block w-100" src="resources/img/img06.jpg" alt="Sixth slide">
             <div class="carousel-caption d-none d-md-block">
                 <a href="http://slimerancher.com/img/screen01.jpg" class="btn btn-success btn-lg">Download!</a>
               </div>          
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/resources/img/img07.jpg" alt="Seventh slide">
+            <img class="d-block w-100" src="resources/img/img07.jpg" alt="Seventh slide">
             <div class="carousel-caption d-none d-md-block">
                 <a href="http://slimerancher.com/img/screen01.jpg" class="btn btn-success btn-lg">Download!</a>
               </div>          
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/resources/img/img08.jpg" alt="Eighth slide">
+            <img class="d-block w-100" src="resources/img/img08.jpg" alt="Eighth slide">
             <div class="carousel-caption d-none d-md-block">
                 <a href="http://slimerancher.com/img/screen01.jpg" class="btn btn-success btn-lg">Download!</a>
               </div>          
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/resources/img/img09.jpg" alt="Ninth slide">
+            <img class="d-block w-100" src="resources/img/img09.jpg" alt="Ninth slide">
             <div class="carousel-caption d-none d-md-block">
                 <a href="http://slimerancher.com/img/screen01.jpg" class="btn btn-success btn-lg">Download!</a>
               </div>          
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/resources/img/img10.jpg" alt="Tenth slide">
+            <img class="d-block w-100" src="resources/img/img10.jpg" alt="Tenth slide">
             <div class="carousel-caption d-none d-md-block">
                 <a href="http://slimerancher.com/img/screen01.jpg" class="btn btn-success btn-lg">Download!</a>
               </div>          
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/resources/img/img11.jpg" alt="Eleventh slide">
+            <img class="d-block w-100" src="resources/img/img11.jpg" alt="Eleventh slide">
             <div class="carousel-caption d-none d-md-block">
                 <a href="http://slimerancher.com/img/screen01.jpg" class="btn btn-success btn-lg">Download!</a>
               </div>          
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/resources/img/img12.jpg" alt="Twelth slide">
+            <img class="d-block w-100" src="resources/img/img12.jpg" alt="Twelth slide">
             <div class="carousel-caption d-none d-md-block">
                 <a href="http://slimerancher.com/img/screen01.jpg" class="btn btn-success btn-lg">Download!</a>
               </div>          
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <img src="/resources/img/arrowLeft.png" aria-hidden="true">
+          <img src="resources/img/arrowLeft.png" aria-hidden="true">
           <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <img src="/resources/img/arrowRight.png" aria-hidden="true">
+          <img src="resources/img/arrowRight.png" aria-hidden="true">
           <span class="sr-only">Next</span>
         </a>
       </div>
@@ -223,14 +223,14 @@
     <div class="container">
       <h1 class="text-uppercase">Make your desktop beautiful!</h1>
       <div class="row no-gutters">
-        <div class="col-md-4"><a href="http://slimerancher.com/img/screen13.jpg" target="_blank"><img src="/resources/img/wall01.jpg" alt=""></a></div>
-        <div class="col-md-4"><a href="http://slimerancher.com/img/screen14.jpg" target="_blank"><img src="/resources/img/wall02.jpg" alt=""></a></div>
-        <div class="col-md-4"><a href="http://slimerancher.com/img/screen15.jpg" target="_blank"><img src="/resources/img/wall03.jpg" alt=""></a></div>
+        <div class="col-md-4"><a href="http://slimerancher.com/img/screen13.jpg" target="_blank"><img src="resources/img/wall01.jpg" alt=""></a></div>
+        <div class="col-md-4"><a href="http://slimerancher.com/img/screen14.jpg" target="_blank"><img src="resources/img/wall02.jpg" alt=""></a></div>
+        <div class="col-md-4"><a href="http://slimerancher.com/img/screen15.jpg" target="_blank"><img src="resources/img/wall03.jpg" alt=""></a></div>
         </div>
         <div class="row no-gutters">
-        <div class="col-md-4"><a href="http://slimerancher.com/img/screen16.jpg" target="_blank"><img src="/resources/img/wall04.jpg" alt=""></a></div>
-        <div class="col-md-4"><a href="http://slimerancher.com/img/screen17.jpg" target="_blank"><img src="/resources/img/wall05.jpg" alt=""></a></div>
-        <div class="col-md-4"><a href="http://slimerancher.com/img/screen18.jpg" target="_blank"><img src="/resources/img/wall06.jpg" alt=""></a></div>
+        <div class="col-md-4"><a href="http://slimerancher.com/img/screen16.jpg" target="_blank"><img src="resources/img/wall04.jpg" alt=""></a></div>
+        <div class="col-md-4"><a href="http://slimerancher.com/img/screen17.jpg" target="_blank"><img src="resources/img/wall05.jpg" alt=""></a></div>
+        <div class="col-md-4"><a href="http://slimerancher.com/img/screen18.jpg" target="_blank"><img src="resources/img/wall06.jpg" alt=""></a></div>
       </div>
     </div>
   </section>
@@ -256,22 +256,22 @@
 <div class="container">
  <div class="text-center">
   <h1 class="text-center">Slime Rancher is developed by Monomi Park</h1>
-  <img src="/resources/img/monomiLogo.png" alt="Monomi Park logo">
+  <img src="resources/img/monomiLogo.png" alt="Monomi Park logo">
   </div>
   <div class="row text-center social-icons pt-3">
     <div class="col-md-4">
-      <a href="http://slimerancher.com/img/SR_site_twitter.png"><img src="/resources/img/twitterLogo.png" alt="Twitter logo"></a>
+      <a href="http://slimerancher.com/img/SR_site_twitter.png"><img src="resources/img/twitterLogo.png" alt="Twitter logo"></a>
     </div>
     <div class="col-md-4">
-      <a href="http://slimerancher.com/img/SR_site_tumblr.png"><img src="/resources/img/tumblrLogo.png" alt="Tumblr logo"></a>
+      <a href="http://slimerancher.com/img/SR_site_tumblr.png"><img src="resources/img/tumblrLogo.png" alt="Tumblr logo"></a>
     </div>
     <div class="col-md-4">
-      <a href="http://slimerancher.com/img/SR_site_mail.png"><img src="/resources/img/mailIcon.png" alt="Mail icon"></a>
+      <a href="http://slimerancher.com/img/SR_site_mail.png"><img src="resources/img/mailIcon.png" alt="Mail icon"></a>
     </div>
   </div>
   <div class="text-center">
  <a href="http://www.monomipark.com/"><h1 class="text-center p-3">www.monomipark.com</h1></a> 
- <img src="/resources/img/pressKit.png" alt="Slime Rancher press kit" class="mb-4">
+ <img src="resources/img/pressKit.png" alt="Slime Rancher press kit" class="mb-4">
  </div>
 </div>
 
