--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+<link rel="icon" href="resources/img/favicon.ico">
+<title>Slime Rancher // Rebuild</title>
 <script src="https://use.fontawesome.com/9f40b6761f.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700" rel="stylesheet">
 <link rel="stylesheet" href="resources/css/style.css">
@@ -45,13 +47,13 @@
      </div>
      <div class="row ctaButtons">
        <div class="col-md-4">
-         <img src="resources/img/steamButton.png" alt="">
+         <a href="http://slimerancher.com/img/buysteam.png"><img src="resources/img/steamButton.png" alt=""></a>
        </div>
        <div class="col-md-4">
-         <img src="resources/img/directButton.png" alt="">
+         <a href="http://slimerancher.com/img/buydirect.png"><img src="resources/img/directButton.png" alt=""></a>
        </div>
        <div class="col-md-4">
-         <img src="resources/img/xboxButton.png" alt="">
+         <a href="http://slimerancher.com/img/buyxbox.png"><img src="resources/img/xboxButton.png" alt=""></a>
        </div>
      </div>
      <div class="row text-center">
